fixed body overflow on mobile nav

--- a/wp-content/themes/custom/scss/site/_nav.scss
+++ b/wp-content/themes/custom/scss/site/_nav.scss
@@ -46,6 +46,8 @@ $nav-background: lighten($brand,0%);
 }
 
 .menu-open{
+	overflow: hidden;
+
 	#nav{
 		height: 100vh;
 		overflow: scroll;
@@ -359,7 +361,7 @@ body.dropdown-on{
 	width: 28px;
 	//outline: 1px solid white;
 	z-index: 10;
-	padding-top: 24px;
+	padding-top: 21px;
 
 	.hamburger-line{
 		display: block;
